jetty-9 jetty-plugins is now able to handle multiple repositoriesmci